katars/tests/snaps/snapshots/snap_errors__nested_expr_error.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"1 + 2 * true\")"
---
Error: cannot apply '*' to Int and Bool
   ╭─[<test>:1:5]
   │
 1 │ 1 + 2 * true
   │     ┬─────┬─  
   │     ╰───────── Int
   │           │   
   │           ╰─── Bool
   │ 
   │ Help: '*' works on matching types: Int*Int, Float*Float, or Str*Str
───╯
